# open-subagent-mcp

./: .gitignore  AGENT_SETUP.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  TRUST_AND_DATA_BOUNDARY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: MIGRATING_FROM_LEGACY_LOCAL_VERSION.md
scripts/: eval_mcp_blackbox.py  eval_real_subagent_canary.py  eval_runtime_fake.py  eval_security_adversarial.py  smoke_mcp_stdio.py  smoke_openai_compatible.py
src/open_subagent_mcp/: __init__.py  __main__.py  actions.py  config.py  llm_client.py  locks.py  mcp_server.py  models.py  prompts.py  rollback.py  runtime.py  security.py  workspace.py
tests/: conftest.py  test_action_schema.py  test_action_security.py  test_command_effects.py  test_config.py  test_integration_runtime.py  test_llm_client.py  test_mcp_schemas.py  test_observation_roundtrip.py  test_prompts.py  test_rollback.py  test_security_paths.py  test_segments.py  test_tool_expansion.py  test_workspace_snapshots.py
