[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "open-subagent-mcp"
version = "0.1.0"
description = "Local MCP server for OpenAI-compatible subagent runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Open Subagent MCP contributors" },
]
keywords = ["mcp", "subagent", "agents", "openai-compatible", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.2",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/g2zz/open-subagent-mcp"
Repository = "https://github.com/g2zz/open-subagent-mcp"
Issues = "https://github.com/g2zz/open-subagent-mcp/issues"

[project.scripts]
open-subagent-mcp = "open_subagent_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/open_subagent_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B007", "B008", "B904"]
